k8s/apps/jonathan/jonathan.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jonathan

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jonathan
  namespace: jonathan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jonathan
  template:
    metadata:
      labels:
        app: jonathan
    spec:
      containers:
      - name: jonathan
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
      volumes:
      - name: www
        persistentVolumeClaim:
          claimName: jonathan-www

---
apiVersion: v1
kind: Service
metadata:
  name: schmidtsgarage
  namespace: jonathan
spec:
  selector:
    app: jonathan
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jonathan
  namespace: jonathan
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jonathan.szigethy.lan
    secretName: jonathan-tls
  rules:
  - host: jonathan.szigethy.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jonathan
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jonathan-public
  namespace: jonathan
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jonathan.szigethy.lan
    secretName: letsencrypt-tls
  rules:
  - host: jonathan.szigethy.dk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: schmidtsgarage
            port:
              number: 80
